--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "google-map-react": "^2.2.0",
+    "install": "^0.13.0",
     "next": "13.2.3",
     "photoswipe": "^5.3.5",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "react-input-range": "^1.3.0",
     "react-modal-video": "^2.0.0",
     "react-multi-date-picker": "^3.3.4",
