--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.2.0",
   "private": true,
   "scripts": {
+    "d" : "explorer http://localhost:3000 & next dev",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
