--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.2.0",
   "private": true,
   "scripts": {
-    "d" : "explorer http://localhost:3000 & next dev",
+    "d": "explorer http://localhost:3000 & next dev",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
@@ -38,5 +39,9 @@
     "sass": "^1.57.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.4.7"
+  },
+  "devDependencies": {
+    "husky": "^8.0.3",
+    "pinst": "^3.0.0"
   }
 }
