--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-multi-date-picker": "^3.3.4",
     "react-parallax": "^3.5.1",
     "react-photoswipe-gallery": "^2.2.6",
+    "react-player": "^2.13.0",
     "react-pro-sidebar": "^1.0.0",
     "react-redux": "^8.0.5",
     "react-slick": "^0.29.0",
