--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-input-range": "^1.3.0",
+    "react-intersection-observer": "^9.5.3",
     "react-modal-video": "^2.0.0",
     "react-multi-date-picker": "^3.3.4",
     "react-parallax": "^3.5.1",
