--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-pro-sidebar": "^1.0.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
+    "react-share": "^5.0.2",
     "react-slick": "^0.29.0",
     "react-tabs": "^6.0.0",
     "sass": "^1.57.1",
